--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,9 @@
 :root {
   --max-width: 1100px;
 
-  --foreground-rgb: #fff;
+  --foreground-rgb: white;
   --background-rgb: green;
+  --error-rgb: red;
 }
 
 * {
