Made amount field resettable

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,12 @@ body {
   display: flex;
   justify-content: center;
 }
+
+@layer {
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+}
